# Loomer

./: MANUAL_DE_USUARIO.md  README.md  new_main.py  pyproject.toml
src/loomer/: app.py
src/loomer/core/: code_processor.py  image_processor.py
src/loomer/libs/: GenerarCode8FDeImg.py  chain_code_translators.py  f8_f4_to_img.py  img_to_4f.py  imt_to_8f.py
src/loomer/ui/: components.py  styles.py
src/loomer/ui/tabs/: code_details_tab.py  code_to_image_tab.py  code_translation_tab.py  image_to_code_tab.py
src/loomer/utils/: file_handlers.py  functions.py  pipe.py  validators.py
